--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,36 @@
+body{
+  background-color: black;
+  color:rgb(226, 226, 226);
+}
+
 .App {
+  margin-top: 20px;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+#char {
+  font-size: calc(100px + 20vmax);
+  margin: 0px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#card {  
+  margin-bottom: 10px;
+  background-color: rgb(53, 53, 53);
+  min-width: 200px;
 }
 
 button {
-  font-size: calc(10px + 2vmin);
+  font-size: calc(10px + 5vmax);
+  margin: 10px;
+  padding-left: 2vw;
+  padding-right: 2vw;
+  background-color: rgb(100, 100, 100);
+  color: white;
+}
+
+#message{
+  font-size: calc(10px + 1.5vmax);
 }
