--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ body{
 #char {
   font-size: calc(100px + 20vmax);
   margin: 0px;
+  line-height: calc(100px + 20vmax);
 }
 
 #card {  
@@ -22,7 +23,7 @@ body{
   min-width: 200px;
 }
 
-button {
+.btn-option {
   font-size: calc(10px + 5vmax);
   margin: 10px;
   padding-left: 2vw;
@@ -33,4 +34,28 @@ button {
 
 #message{
   font-size: calc(10px + 1.5vmax);
+}
+
+/* RADIO BUTTON STYLES */
+
+.burger-menu input[type="radio"] {
+  opacity: 0;
+  position: fixed;
+  width: 0;
+}
+
+.radio-btn:checked + .radio-btn-label {
+  background-color:rgb(55, 55, 55);
+  border-color: rgb(155, 155, 155);
+}
+
+.radio-btn-label {
+  display: inline-block;
+  padding: 10px;
+  font-family: sans-serif, Arial;
+  font-size: 18px;
+  border: 2px solid #444;
+  border-radius: 4px;
+  width: 90%;
+  margin: 5px;
 }
