--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ body{
 
 /* RADIO BUTTON STYLES */
 
-.burger-menu input[type="radio"] {
+.burger-menu input[type="radio"], .burger-menu input[type="checkbox"] {
   opacity: 0;
   position: fixed;
   width: 0;
