--- a/src/SideMenu/Menu.css
+++ b/src/SideMenu/Menu.css
@@ -14,14 +14,22 @@
 }
 
 .overlay.burger-overlay {
-  
+  backdrop-filter: blur(10px);
   background: rgba(0,0,0, 0.8) !important;
 }
 
 .menu {
-  margin-top: 25px;
+  margin-top: 15px;
 }
 
 .bm-item:hover{
   background-color: rgb(35, 35, 35);
+}
+
+.menu-break {
+  background-color: rgb(55, 55, 55);
+  width: 100%;
+  height: 2px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
