--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,26 @@
-body{
-  background-color: black;
-  color:rgb(226, 226, 226);
+:root {
+  --background: black;
+  --text-color: rgb(226, 226, 226);
+  --card-bg-color: rgb(53, 53, 53);
+  --option-button-bg-color: rgb(100, 100, 100);
+}
+
+[data-theme='light'] {
+  --background: white;
+  --text-color: rgb(26, 26, 26);
+  --card-bg-color: rgb(230, 230, 230);
+  --option-button-bg-color: rgb(200, 200, 200);
 }
 
 .App {
-  margin-top: 20px;
+  padding-top: 20px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: var(--background);
+  height: 100vh;
+  color: var(--text-color);
 }
 
 #char {
@@ -19,7 +31,7 @@ body{
 
 #card {  
   margin-bottom: 10px;
-  background-color: rgb(53, 53, 53);
+  background-color: var(--card-bg-color);
   min-width: 200px;
 }
 
@@ -28,34 +40,11 @@ body{
   margin: 10px;
   padding-left: 2vw;
   padding-right: 2vw;
-  background-color: rgb(100, 100, 100);
-  color: white;
+  background-color: var(--option-button-bg-color);
+  color: var(--text-color);
+  border: none;
 }
 
 #message{
   font-size: calc(10px + 1.5vmax);
-}
-
-/* RADIO BUTTON STYLES */
-
-.burger-menu input[type="radio"], .burger-menu input[type="checkbox"] {
-  opacity: 0;
-  position: fixed;
-  width: 0;
-}
-
-.radio-btn:checked + .radio-btn-label {
-  background-color:rgb(55, 55, 55);
-  border-color: rgb(155, 155, 155);
-}
-
-.radio-btn-label {
-  display: inline-block;
-  padding: 10px;
-  font-family: sans-serif, Arial;
-  font-size: 18px;
-  border: 2px solid #444;
-  border-radius: 4px;
-  width: 90%;
-  margin: 5px;
 }
