--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
   --text-color: rgb(226, 226, 226);
   --card-bg-color: rgb(53, 53, 53);
   --option-button-bg-color: rgb(100, 100, 100);
+  --font-size: 500px;
 }
 
 [data-theme="light"] {
@@ -12,21 +13,27 @@
   --option-button-bg-color: rgb(200, 200, 200);
 }
 
+@media screen and (max-width: 500px) {
+  :root {
+    --font-size: 100vw;
+  }
+}
+
 .App {
-  padding-top: 20px;
+  padding-top: 40px;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: var(--background);
-  height: 100vh;
+  height: calc(100vh - 40px);
   color: var(--text-color);
 }
 
 #char {
-  font-size: calc(100px + 20vmax);
+  font-size: var(--font-size);
   margin: 0px;
-  line-height: calc(100px + 20vmax);
+  line-height: var(--font-size);
 }
 
 #card {
